--- a/.env
+++ b/.env
@@ -17,11 +17,6 @@
 APP_ENV=dev
 APP_SECRET=a8a703ace8941d482dfacb0bdd2f14df
 ###< symfony/framework-bundle ###
-
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-###< symfony/mailer ###
-
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -30,3 +25,7 @@ APP_SECRET=a8a703ace8941d482dfacb0bdd2f14df
 DATABASE_URL="mysql://root:@127.0.0.1:3306/home?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL=mysql://root:root@127.0.0.1:8889/home
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://9926ba2dab713d:c79e3e04a9af05@sandbox.smtp.mailtrap.io:2525
+###< symfony/mailer ###
