--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,13 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        main:
+            lazy: true
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout:
+                path: logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -28,8 +35,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/mon compte, roles: ROLE_USER }
+     - { path: ^/admin, roles: ROLE_ADMIN }
+     - { path: ^/account, roles: ROLE_USER }
+     - { path: ^/commande, roles: ROLE_USER }
 
 when@test:
     security:
