--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,7 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+reset_password:
+    path: /reset-password
+    controller: App\Controller\YourController::resetPasswordAction
+
 
 
 
